# onto-app-models

./: .env  .gitignore  .secrets.template  CLAUDE.md  GEMINI.md  README.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  errors.ndjson  nginx.conf  package.json  pyproject.toml
ansible/: site.yml  (+1 more)
llm-model-generator/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
llm-model-generator/app/: main.py  models.py  schemas.py
llm-model-generator/app/alembic/: env.py
llm-model-generator/app/alembic/versions/: 0714154983d4_knowledge_graph_is_a_mandatory_field.py  11177aea917a_changes_on_the_appmodel_knowledge_graph_.py  21e1964414eb_initial_revision.py  f16b12e4dcf3_add_table_appmodels_with_ontology_based_.py  fb3473960be7_json_ld_and_rdf_format_for_the_same_.py
llm-model-generator/app/api/: main.py
llm-model-generator/app/contracts/: __init__.py  engine.py
llm-model-generator/app/core/: config.py  db.py  engine_rpc.py  engine_transport.py  security.py  session_service.py
llm-model-generator/app/engine_worker/: __init__.py  __main__.py
llm-model-generator/app/model_generator/: README.md  __init__.py  __main__.py  builder.py  ir.py  shacl_reader.py  templates.py
llm-model-generator/app/ontologies/: obop.owl
llm-model-generator/app/owlprocessor/: app_engine.py  app_model.py  app_model_factory.py  app_state.py  bbo_elements.py  communication.py  form_elements.py  forms.py  obop_action.py  process_engine.py  static_model_cache.py  validate_model.py
llm-model-generator/app/temporary_models/: after_cloning.owl  after_hermit_applied.owl  after_pellet_applied.owl  before_hermit.owl
llm-model-generator/app/tests/: test_loading.py  test_model_generator.py
llm-model-generator/app/utilities/: model_directory_functions.py
llm-model-generator/app_models/: complete_restaurant.ttl  enter-string-form.ttl  old-restaurant-model.ttl  restaurant-preprocessed.ttl  restaurant-shacl.ttl  restaurant-shacl_explicite-bnodes.ttl  restaurant_model_ttl1_shacl_shape.ttl  restaurant_model_ttl_with_bnodes_defined_with_nesting.ttl  simple_form_shacl_1.ttl  submit-cancel-buttons.ttl
(+275 files in other folders)
