[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "chuk-llm>=0.12.2",
    "fastapi[standard]>=0.115.0,<1.0.0",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    "ollama>=0.4.0",
    "pydantic>2.0",
    "emails<1.0,>=0.6",
    "pydantic-settings<3.0.0,>=2.2.1",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    "rdflib>=7.6.0",
    "owlready2>=0.50",
    "pyshacl>=0.31.0",
    "jsonpickle>=4.1.1",
    "alembic<2.0.0,>=1.18.4",
    "argon2-cffi>=25.1.0",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]
